--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div style="font-size: 100.0px;">
 Welcome to my website<br>
 <br>
-<div style=@font-size: 40.0px;">
+<div style="font-size: 40.0px;">
 This is a website in progress<br>
 
 </body>
