--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ Welcome to my website<br>
 <br>
 <div style="font-size: 40.0px;">
 This is a website in progress<br>
+<br>
+<div style="font-size: 40.0px;">
+Join my discord: https://discord.gg/sZ5eaMckrH<br>
 
 </body>
 </html>
