--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ Welcome to my website<br>
 This is a website in progress<br>
 <br>
 <div style="font-size: 40.0px;">
-Join my discord: https://discord.gg/sZ5eaMckrH<br>
+Join my discord:<br>
+<br>
+<a href="https://discord.gg/sZ5eaMckrH">link text</a><br>
 
 </body>
 </html>
