--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ This is a website in progress<br>
 <div style="font-size: 40.0px;">
 Join my discord:<br>
 <br>
-<a href="https://discord.gg/sZ5eaMckrH">link text</a><br>
+<a href="https://discord.gg/sZ5eaMckrH">Discord Server Hmmmm</a><br>
 
 </body>
 </html>
