--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
     <link rel="stylesheet" href="sswg.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/L1DXWO1.png">
 </head>
 <body>
 <left>
