--- a/404.html
+++ b/404.html
@@ -6,4 +6,14 @@
     404 Page not found<br></div>
 <div style="font-size: 20.0px;">
 Did you want something else?</div>
+
+<br>
+<a href="arandomwebsite.ddns.net">Home page</a><br>
+
+
+
+
+
+
+
 </html>
