--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@ Join my discord:<br>
 <br>
 <a href="https://discord.gg/sZ5eaMckrH">Discord Server Hmmmm</a><br>
 
+<button onclick="window.location.href = 'arandomwebsite.ddns.net/Downloads;">Go to Example Page</button>
 </body>
 </html>
