--- a/Downloads.html
+++ b/Downloads.html
@@ -6,6 +6,6 @@
 This page has some of my games that I am working on.</div>
 
 <br>
-<a href="T:\DOORS BETA V1.0" download>Download Doors v1.0 script</a>
+<a href="T:\DOORS BETA V1.0\" download>Download Doors v1.0 script</a>
 
 </html>
