--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 Did you want something else?</div>
 
 <br>
-<a href="arandomwebsite.ddns.net">Home page</a><br>
+<a href="https://arandomwebsite.ddns.net">Home page</a><br>
 
 
 
